--- a/_includes/cover.html
+++ b/_includes/cover.html
@@ -1,6 +1,6 @@
 <div class="cover" id="home" style="background-image: url('{% if jekyll.environment == "production" %}{% include images/title.base64 %}{% else %}{{ site.data.cover.image }}{% endif %}')">
     <div class="cover-inner">
-        <img src="{{ site.data.cover.logo }}">
+        <img src="{{ site.data.cover.logo }}" alt="Logo">
         <h1>{{ site.data.cover.title }}</h1>
         <p>{{ site.data.cover.subtitle }}</p>
         <a href="{{ site.data.cover.button.link }}" tabindex="-1">
