Fix License formatting and link

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
     <section>
         <p>
             © {{ now.Format "2006" }} {{ .Site.Title }}.
-            <a href='{{ relref . "/" }}'>CC0 1.0</a>
+            <a href='{{ relref . "/imprint" }}#cc0'>CC0 1.0</a>
         </p>
     </section>
     {{ if .Site.Menus.footer }}
