--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,5 @@
 $color: #000000;
+$color-active: #052561;
 $background: #FFFFFF;
 $title-size: 0.07;
 $description-size: 0.05;
@@ -18,6 +19,19 @@ body {
     color: $color;
     background: $background;
     font-family: "Space Mono", monospace;
+
+    a {
+        color: $color-active;
+
+        &:visited {
+            color: desaturate($color-active, 30%);
+        }
+
+        &:hover, &:active {
+            color: lighten(desaturate($color-active, 40%), 20%);
+            text-decoration-style: dashed;
+        }
+    }
 
     .fontawesome {
         $font-awesome-scale: 0.75;
