--- a/layouts/partials/favicon.html
+++ b/layouts/partials/favicon.html
@@ -2,3 +2,8 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#052561">
+<meta name="apple-mobile-web-app-title" content="Jan Heinrich Reimer">
+<meta name="application-name" content="Jan Heinrich Reimer">
+<meta name="msapplication-TileColor" content="#052561">
+<meta name="theme-color" content="#ffffff">
