Change copyright symbol Fix #16

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -33,7 +33,7 @@ body {
         }
     }
 
-    .fontawesome {
+    .icon-font {
         $font-awesome-scale: 0.75;
         $font-awesome-size: 1em * $font-awesome-scale;
 
