--- a/layouts/partials/fontawesome.html
+++ b/layouts/partials/fontawesome.html
@@ -9,7 +9,7 @@
 {{- $svg := $asset.Content -}}
 {{- $svg := replace $svg $path $pathFill -}}
 <span class="icon-font">
-    {{- safeHTML "<!-- SVG by https://fontawesome.com/ (CC BY 4.0) -->" -}}
+    {{- safeHTML "<!-- SVG by https://github.com/FortAwesome/Font-Awesome (CC BY 4.0) -->" -}}
     {{- safeHTML $svg -}}
 </span>
 {{- safeHTML "" -}}
