--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,7 +13,7 @@ body {
     width: 100%;
     height: 100vh;
     margin: 0;
-    padding: 1em;
+    padding: 1em 1em 0;
     box-sizing: border-box;
 
     color: $color;
