Update license information

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,8 @@
 <footer>
     <section>
         <p>
-            <a href='{{ relref . "/imprint" }}#cc0'
-               title="CC0 1.0 Universal (CC0 1.0) Public Domain Dedication">
+            <a href='{{ relref . "/imprint" }}#lizenz'
+               title="CC0 1.0 Universal Public Domain Dedication">
                 {{- partial "cc-icon.html" "zero" -}}
             </a> {{ now.Format "2006" }} {{ .Site.Title }}.
         </p>
