Add German translation

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,16 +1,25 @@
 <footer>
     <p>
-        <a href='{{ relref . "/imprint" }}#lizenz'
+        <a href='{{ relref . "/imprint#lizenz" }}'
            title="CC0 1.0 Universal Public Domain Dedication">
             {{- partial "cc-icon.html" "zero" -}}
         </a> {{ now.Format "2006" }} {{ .Site.Title }}.
     </p>
-    {{ if .Site.Menus.footer }}
+    {{ if (or .Site.Menus.footer .Site.IsMultiLingual) }}
     <ul>
         {{ range .Site.Menus.footer }}
         <li>
             <a href="{{ .URL }}" title="{{ .Name }}">{{ .Name }}</a>
         </li>
+        {{ end }}
+        {{ range .Site.Languages }}
+        {{ if ne . $.Site.Language }}
+        {{ range $.Translations }}
+        <li>
+            <a href="{{ .Permalink }}" title="{{ .Language.LanguageName }}">{{ upper .Language }}</a>
+        </li>
+        {{ end }}
+        {{ end }}
         {{ end }}
     </ul>
     {{ end }}
