--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,10 +1,15 @@
 {{ define "main" }}
 <article id="404">
-    <h1>
-        Page not found
-    </h1>
-    The page you requested aufgerufene doesn't exist.<br>
-    Simply go back to the <a href="{{ .Site.BaseURL }}" title="Home">homepage</a><br>
+    {{ if eq (lower .Site.Language) "de" }}
+    <h1>Seite nicht gefunden</h1>
+    Die angefragte Seite existiert nicht.<br>
+    Geh einfach zurück zur <a href="{{ .Site.BaseURL }}" title="Startseite">Startseite</a>
+    oder <a href='{{ relref . "/imprint" }}' title="Imprint">kontaktiere</a> mich.
+    {{ else }}
+    <h1>Page not found</h1>
+    The page you requested doesn't exist.<br>
+    Simply go back to the <a href="{{ .Site.BaseURL }}" title="Homepage">homepage</a>
     or <a href='{{ relref . "/imprint" }}' title="Imprint">contact</a> me.
+    {{ end }}
 </article>
 {{ end }}
