Update imprint & privacy policy

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <p>
-        <a href='{{ relref . "/imprint#lizenz" }}'
+        <a href='{{ relref . "/imprint.md#license" }}'
            title="CC0 1.0 Universal Public Domain Dedication">
             {{- partial "cc-icon.html" "zero" -}}
         </a> {{ now.Format "2006" }} {{ .Site.Title }}.
