--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
-<html lang='{{ $.Site.LanguageCode | default "en-us" }}'>
+<html lang='{{ $.Site.LanguageCode | default "en" }}'>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     {{/* NOTE: the Site's title, and if there is a page title, that is set too */}}
     <title>{{ block "title" . }}{{ with .Params.Title }}{{ . }} • {{ end }}{{ .Site.Title }}{{ end }}</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1">
-    {{ hugo.Generator }}
+    {{- hugo.Generator -}}
+
     {{/* NOTE: For Production make sure you add `HUGO_ENV="production"` before your build command */}}
-    {{ if eq $.Site.Params.env "production" }}
+    {{- if eq $.Site.Params.env "production" -}}
     <meta name="robots" content="index, follow">
-    {{ else }}
+    {{- else -}}
     <meta name="robots" content="noindex, nofollow">
-    {{ end }}
+    {{- end -}}
 
-    {{ block "styles" . }}
-    {{ partial "styles.html" . }}
-    {{ end }}
+    {{- block "styles" . -}}
+    {{- partial "styles.html" . -}}
+    {{- end -}}
 
-    {{ block "favicon" . }}
-    {{ partial "favicon.html" . }}
-    {{ end }}
+    {{- block "favicon" . -}}
+    {{- partial "favicon.html" . -}}
+    {{- end -}}
 
-    {{ if .OutputFormats.Get "RSS" }}
-    {{ with .OutputFormats.Get "RSS" }}
+    {{- with .OutputFormats.Get "RSS" -}}
     <link href="{{ .RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ $.Site.Title }}"/>
     <link href="{{ .RelPermalink }}" rel="feed" type="application/rss+xml" title="{{ $.Site.Title }}"/>
-    {{ end }}
-    {{ end }}
+    {{- end -}}
+
+    {{- range .Site.Languages -}}
+    {{- if ne . $.Site.Language -}}
+    {{- range $.Translations -}}
+    <link href="{{ .Permalink }}" hreflang="{{ .Language }}" rel="alternate"/>
+    {{- end -}}
+    {{- end -}}
+    {{- end -}}
 
     {{/* NOTE: These Hugo Internal Templates can be found starting at
     https://github.com/spf13/hugo/blob/master/tpl/tplimpl/template_embedded.go#L158 */}}
@@ -35,9 +42,9 @@
     {{- template "_internal/schema.html" . -}}
     {{- template "_internal/twitter_cards.html" . -}}
 
-    {{ if eq (getenv "HUGO_ENV") "production" }}
-    {{ template "_internal/google_analytics_async.html" . }}
-    {{ end }}
+    {{- if eq (getenv "HUGO_ENV") "production" -}}
+    {{- template "_internal/google_analytics_async.html" . -}}
+    {{- end -}}
 </head>
 
 <body class="{{ $.Site.Params.env }} {{ if .IsHome }} home {{ else }} page-{{ anchorize .Title }} {{ end }}">
