--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -73,6 +73,29 @@ body {
             break-inside: avoid;
         }
 
+        * {
+            > span.spoiler {
+                visibility: hidden;
+            }
+            &:hover, &:focus, &:active {
+                > span.spoiler {
+                    visibility: visible;
+                }
+            }
+        }
+
+        span.spoiler {
+            filter: blur(0.25rem);
+            opacity: 0.75;
+            transition: 0.1s filter ease-in, 0.1s opacity ease-in;
+
+            &:hover, &:focus, &:active {
+                transition-duration: 0.75s, 0.75s;
+                filter: inherit;
+                opacity: inherit;
+            }
+        }
+
         figure {
             margin: 1em 0;
 
