--- a/layouts/shortcodes/sponsors.html
+++ b/layouts/shortcodes/sponsors.html
@@ -1,6 +1,6 @@
 {{ with $.Site.Data.sponsors }}
 <ul>
-    {{ range . }}
+    {{ range .sponsors }}
     <li>
         {{ .name }}{{ if .github }} <a href="https://github.com/{{ .github }}">@{{ .github }}</a>{{ end }}
     </li>
