--- a/layouts/shortcodes/fontawesome.html
+++ b/layouts/shortcodes/fontawesome.html
@@ -1,11 +1,10 @@
-{{- $path := print "node_modules/@fortawesome/fontawesome-free/svgs/" ( .Get 0 ) ".svg" -}}
-{{- $asset := resources.Get $path | resources.Minify -}}
+{{- $resourcePath := print "node_modules/@fortawesome/fontawesome-free/svgs/" ( .Get 0 ) ".svg" -}}
+{{- $asset := resources.Get $resourcePath | resources.Minify -}}
 
 {{- $path := "<path" -}}
 {{- $pathFill := "<path fill=\"currentColor\"" -}}
 
-{{- $svg := $asset.Content -}}
-{{- $svg := replace $svg $path $pathFill -}}
+{{- $svg := replace $asset.Content $path $pathFill -}}
 <span class="icon-font">
     {{- safeHTML "<!-- SVG by https://github.com/FortAwesome/Font-Awesome (CC BY 4.0) -->" -}}
     {{- safeHTML $svg -}}
