Improve partials and shortcodes

--- a/layouts/shortcodes/cc-icon.html
+++ b/layouts/shortcodes/cc-icon.html
@@ -1,12 +1,1 @@
-{{- $resourcePath := print "/node_modules/cc-icons/svg/" ( .Get 0 ) ".svg" -}}
-{{- $asset := resources.Get $resourcePath | resources.Minify -}}
-
-{{- $path := "<path" -}}
-{{- $pathFill := "<path fill=\"currentColor\"" -}}
-
-{{- $svg := replace $asset.Content $path $pathFill -}}
-<span class="icon-font">
-    {{- safeHTML "<!-- SVG by https://github.com/cc-icons/cc-icons (CC BY 4.0) -->" -}}
-    {{- safeHTML $svg -}}
-</span>
-{{- safeHTML "" -}}
+{{- partial "cc-icon" ( .Get 0 ) -}}
