--- a/layouts/partials/cc-icon.html
+++ b/layouts/partials/cc-icon.html
@@ -1,15 +1,12 @@
-{{- $path := print "/node_modules/cc-icons/svg/" . ".svg" -}}
-{{- $asset := resources.Get $path | resources.Minify -}}
+{{- $resourcePath := print "/node_modules/cc-icons/svg/" . ".svg" -}}
+{{- $asset := resources.Get $resourcePath | resources.Minify -}}
 
-{{/* <!-- */}}
 {{- $path := "<path" -}}
 {{- $pathFill := "<path fill=\"currentColor\"" -}}
-{{/* --> */}}
 
-{{- $svg := $asset.Content -}}
-{{- $svg := replace $svg $path $pathFill -}}
+{{- $svg := replace $asset.Content $path $pathFill -}}
 <span class="icon-font">
     {{- safeHTML "<!-- SVG by https://github.com/cc-icons/cc-icons (CC BY 4.0) -->" -}}
     {{- safeHTML $svg -}}
 </span>
-{{- safeHTML "" -}}
+{{- /* Remove trailing space. */ -}}
