--- a/layouts/shortcodes/fontawesome.html
+++ b/layouts/shortcodes/fontawesome.html
@@ -1,12 +1,1 @@
-{{- $resourcePath := print "node_modules/@fortawesome/fontawesome-free/svgs/" ( .Get 0 ) ".svg" -}}
-{{- $asset := resources.Get $resourcePath | resources.Minify -}}
-
-{{- $path := "<path" -}}
-{{- $pathFill := "<path fill=\"currentColor\"" -}}
-
-{{- $svg := replace $asset.Content $path $pathFill -}}
-<span class="icon-font">
-    {{- safeHTML "<!-- SVG by https://github.com/FortAwesome/Font-Awesome (CC BY 4.0) -->" -}}
-    {{- safeHTML $svg -}}
-</span>
-{{- safeHTML "" -}}
+{{- partial "fontawesome" ( .Get 0 ) -}}
