Improve favicon partial

--- a/layouts/partials/favicon.html
+++ b/layouts/partials/favicon.html
@@ -1,9 +1,9 @@
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#052561">
-<meta name="apple-mobile-web-app-title" content="Jan Heinrich Reimer">
-<meta name="application-name" content="Jan Heinrich Reimer">
-<meta name="msapplication-TileColor" content="#052561">
-<meta name="theme-color" content="#ffffff">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ "/apple-touch-icon.png" | absURL }}">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ "/favicon-32x32.png" | absURL }}">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ "/favicon-16x16.png" | absURL }}">
+<link rel="manifest" href="{{ "/site.webmanifest" | absURL }}">
+<link rel="mask-icon" href="{{ "/safari-pinned-tab.svg" | absURL }}" color="{{ $.Site.Params.themeColor }}">
+<meta name="apple-mobile-web-app-title" content="{{ $.Site.Title }}">
+<meta name="application-name" content="{{ $.Site.Title }}">
+<meta name="msapplication-TileColor" content="{{ $.Site.Params.colors.theme }}">
+<meta name="theme-color" content="{{ $.Site.Params.colors.background }}">
