--- a/layouts/partials/favicon.html
+++ b/layouts/partials/favicon.html
@@ -1,8 +1,8 @@
-<link rel="apple-touch-icon" sizes="180x180" href="{{ "/apple-touch-icon.png" | absURL }}">
-<link rel="icon" type="image/png" sizes="32x32" href="{{ "/favicon-32x32.png" | absURL }}">
-<link rel="icon" type="image/png" sizes="16x16" href="{{ "/favicon-16x16.png" | absURL }}">
-<link rel="manifest" href="{{ "/site.webmanifest" | absURL }}">
-<link rel="mask-icon" href="{{ "/safari-pinned-tab.svg" | absURL }}" color="{{ $.Site.Params.themeColor }}">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ "/apple-touch-icon.png" | relURL }}">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ "/favicon-32x32.png" | relURL }}">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ "/favicon-16x16.png" | relURL }}">
+<link rel="manifest" href="{{ "/site.webmanifest" | relURL }}">
+<link rel="mask-icon" href="{{ "/safari-pinned-tab.svg" | relURL }}" color="{{ $.Site.Params.themeColor }}">
 <meta name="apple-mobile-web-app-title" content="{{ $.Site.Title }}">
 <meta name="application-name" content="{{ $.Site.Title }}">
 <meta name="msapplication-TileColor" content="{{ $.Site.Params.colors.theme }}">
