--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,9 @@
 <footer>
     <p>
-        <a href='{{ relref . "/imprint#license" }}'
+        <a href='{{ relref $ "/imprint#license" }}'
            title="CC0 1.0 Universal Public Domain Dedication">
             {{- partial "cc-icon.html" "zero" -}}
-        </a> {{ now.Format "2006" }} {{ $.Site.Title }}.
+        </a> {{ now.Format "2006" }} {{ $.Site.Data.facts.name }}.
     </p>
     {{ if (or $.Site.Menus.footer $.Site.IsMultiLingual) }}
         <ul>
