--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     {{/* NOTE: the Site's title, and if there is a page title, that is set too */}}
-    <title>{{ block "title" . }}{{ with .Params.Title }}{{ . }} • {{ end }}{{ .Site.Title }}{{ end }}</title>
+    <title>{{ block "title" . }}{{ with .Params.Title }}{{ . }} • {{ end }}{{ $.Site.Title }}{{ end }}</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1">
     {{- hugo.Generator -}}
 
@@ -28,7 +28,7 @@
         <link href="{{ .RelPermalink }}" rel="feed" type="application/rss+xml" title="{{ $.Site.Title }}"/>
     {{- end -}}
 
-    {{- range .Site.Languages -}}
+    {{- range $.Site.Languages -}}
         {{- if ne . $.Site.Language -}}
             {{- range $.Translations -}}
                 <link href="{{ .Permalink }}" hreflang="{{ .Language }}" rel="alternate"/>
@@ -47,7 +47,7 @@
     {{- end -}}
 </head>
 
-<body class="{{ $.Site.Params.env }} {{ if .IsHome }} home {{ else }} page-{{ anchorize .Title }} {{ end }}">
+<body class="{{ if .IsHome }} home {{ else }} page-{{ anchorize .Title }} {{ end }}">
 
 {{ block "navigation" . }}
     {{ partial "navigation.html" . }}
