--- a/layouts/partials/publications.html
+++ b/layouts/partials/publications.html
@@ -1,23 +1,50 @@
+{{- if not (reflect.IsMap .) -}}
+    {{ errorf "Input must be a map: %s" .Position }}
+{{- end -}}
+
+{{- $orcid := .orcid -}}
 {{- $dois := .dois -}}
 {{- $author := .author -}}
 {{- $mail := .mail -}}
+{{- if and (not $orcid) (not $dois) -}}
+    {{ errorf "Must specify either 'orcid' or 'dois': %s" .Position }}
+{{- end -}}
+
+{{- $crossrefApiUrl := "https://api.crossref.org/v1/" -}}
+{{- $crossrefUserAgent := "" -}}
+{{- with $author -}}{{- $crossrefUserAgent = print $crossrefUserAgent $author -}}{{- end -}}
+{{- with $mail -}}{{- $crossrefUserAgent = print $crossrefUserAgent "; mailto:" $mail -}}{{- end -}}
+{{- $crossrefHeaders := dict "Accept" "application/json" "User-Agent" $crossrefUserAgent -}}
+
+{{- $orcidApiUrl := "https://pub.orcid.org/v3.0/" -}}
+{{- $orcidHeaders := dict "Accept" "application/json" -}}
+
+{{/* Initialize DOIs if none were given. */}}
 {{- if not $dois -}}
-    {{ errorf "Missing value for param 'dois': %s" .Position }}
-{{- end -}}
-{{- if not $author -}}
-    {{ errorf "Missing value for param 'author': %s" .Position }}
-{{- end -}}
-{{- if not $mail -}}
-    {{ errorf "Missing value for param 'mail': %s" .Position }}
+    {{- $dois = slice -}}
 {{- end -}}
 
-{{- $apiUrl := "https://api.crossref.org/v1/" -}}
+{{/* Fetch DOIs for all works from ORCiD. */}}
+{{- if $orcid -}}
+    {{- $orcidWorks := getJSON $orcidApiUrl $orcid "/works/" $orcidHeaders -}}
+    {{- with $orcidWorks -}}
+        {{- range .group -}}
+            {{- $workSummary := index (index . "work-summary") 0 -}}
+            {{- $externalIds := index (index $workSummary "external-ids") "external-id" -}}
+            {{- $doi := index (where $externalIds "external-id-type" "doi") 0 -}}
+            {{- with $doi -}}
+                {{- with index . "external-id-value" -}}
+                    {{- $dois = $dois | append . -}}
+                {{- end -}}
+            {{- end -}}
+        {{- end -}}
+    {{- end -}}
+{{- end -}}
 
-{{- $publications := slice -}}
+{{/* Fetch Crossref works from DOIs. */}}
+{{- $crossrefWorks := slice -}}
 {{- range $dois -}}
-    {{- $headers := dict "Accept" "application/json" -}}
-    {{- $headers = merge $headers (dict "User-Agent" (print $author "; mailto:" $mail)) -}}
-    {{- $work := getJSON $apiUrl "works/" . $headers -}}
+    {{- $work := getJSON $crossrefApiUrl "works/" . $crossrefHeaders -}}
     {{- with $work -}}
         {{- if .status -}}
             {{- if eq .status "ok" -}}
@@ -42,20 +69,25 @@
                     {{- end -}}
                     {{- $date := dict "year" $year "month" $month "day" $day -}}
                     {{- $message = merge $message $date -}}
-                    {{- $publications = $publications | append $message -}}
+                    {{- $crossrefWorks = $crossrefWorks | append $message -}}
                 {{- end -}}
             {{- end -}}
         {{- end -}}
     {{- end -}}
 {{- end -}}
-{{- $publications = sort $publications "publishedDay" "desc" -}}
-{{- $publications = sort $publications "publishedMonth" "desc" -}}
-{{- $publications = sort $publications "publishedYear" "desc" -}}
+
+{{/* Sort works by latest publication date. */}}
+{{- $crossrefWorks = sort $crossrefWorks "publishedDay" "desc" -}}
+{{- $crossrefWorks = sort $crossrefWorks "publishedMonth" "desc" -}}
+{{- $crossrefWorks = sort $crossrefWorks "publishedYear" "desc" -}}
+
+{{/* Output publications table. */}}
 <figure>
     <table>
         <tbody>
-        {{- range $publications -}}
-            <tr>
+        {{- range $crossrefWorks -}}
+            {{- $title := index .title 0 -}}
+            <tr id="{{ anchorize $title }}">
                 <td>
                     {{- with .month -}}
                         {{- printf "%02d" . -}}/
@@ -68,8 +100,10 @@
                             {{- if gt $coauthorIndex 0 -}}
                                 {{- ", " -}}
                             {{- end -}}
-                            {{- if in $author $coauthor.family -}}
-                                <strong>
+                            {{- if $author -}}
+                                {{- if in $author $coauthor.family -}}
+                                    <mark>
+                                {{- end -}}
                             {{- end -}}
                             {{- $firstNames := split $coauthor.given " " -}}
                             {{- range $firstNames -}}
@@ -77,31 +111,26 @@
                                 {{- ". " -}}
                             {{- end -}}
                             {{- $coauthor.family -}}
-                            {{- if in "Jan Heinrich Reimer" $coauthor.family -}}
-                                </strong>
+                            {{- if $author -}}
+                                {{- if in $author $coauthor.family -}}
+                                    </mark>
+                                {{- end -}}
                             {{- end -}}
                         {{- end -}}
                     </small><br>
                     <a href="{{ .URL }}" rel="noreferrer" target="_blank">
-                        {{- index .title 0 -}}
+                        {{- $title -}}
                     </a><br>
                     <small>
-                        <em>
-                            {{- "In " -}}{{- index (index . "container-title") 0 -}}{{- ". " -}}
-                            {{- .publisher -}}{{- ", " -}}
-                            {{- index . "publisher-location" -}}
-                        </em><br>
+                        In <em>{{- index (index . "container-title") 0 -}}</em>{{- ". " -}}
+                        {{- .publisher -}}{{- ". " -}}
+                        {{- index . "publisher-location" -}}.
                         DOI:
                         {{- " " -}}
                         <a href="{{ .URL }}" rel="noreferrer" target="_blank">
                             {{- .DOI -}}
                         </a>
                     </small>
-                </td>
-                <td>
-                    <a href="{{ .URL }}" rel="noreferrer" target="_blank">
-                        {{- partial "fontawesome.html" "solid/file-alt" -}}
-                    </a>
                 </td>
             </tr>
         {{- end -}}
