--- a/layouts/shortcodes/publications.html
+++ b/layouts/shortcodes/publications.html
@@ -1,4 +1,4 @@
-{{- $orcid := $.Site.Params.orcid -}}
-{{- $author := $.Site.Title -}}
-{{- $mail := $.Site.Params.mail -}}
-{{- partial "orcid-publications" (dict "orcid" $orcid "author" $author "mail" $mail) -}}
+{{- $orcid := $.Site.Data.social.orcid -}}
+{{- $author := $.Site.Data.facts.name -}}
+{{- $mail := $.Site.Data.facts.mail -}}
+{{- partial "publications" (dict "orcid" $orcid "author" $author "mail" $mail) -}}
