--- a/layouts/partials/github/stats/osi-approved-repos.html
+++ b/layouts/partials/github/stats/osi-approved-repos.html
@@ -1,30 +1,12 @@
-{{- $username := "" -}}
-{{- with .Get 0 -}}
-{{- $username = . -}}
-{{- else -}}
-{{- with .Get "username" -}}
-{{- $username = . -}}
-{{- else -}}
-{{- with $.Site.Params.github.username -}}
-{{- $username = . -}}
-{{- else -}}
-{{ errorf "Missing value for param 'username': %s" .Position }}
-{{- end -}}
-{{- end -}}
+{{- $username := . -}}
+{{- if not $username -}}
+    {{ errorf "Input must be a GitHub username: %s" .Position }}
 {{- end -}}
 
-{{- $apiUrl := "" -}}
-{{- with .Get "api-url" -}}
-{{- $apiUrl = . -}}
-{{- else -}}
-{{- with $.Site.Params.github.apiUrl -}}
-{{- $apiUrl = . -}}
-{{- else -}}
-{{ errorf "Missing value for param 'api-url': %s" .Position }}
-{{- end -}}
-{{- end -}}
+{{- $githubApiUrl := "https://api.github.com/" -}}
+{{- $githubHeaders := dict "Accept" "application/vnd.github.v3+json" -}}
 
-{{- $userData := getJSON $apiUrl "users/" $username (dict "Accept" "application/vnd.github.v3+json") -}}
+{{- $userData := getJSON $githubApiUrl "users/" $username $githubHeaders -}}
 {{- $ownedReposData := getJSON $userData.repos_url "?per_page=100&type=owner" (dict "Accept" "application/vnd.github.v3+json") -}}
 {{- $memberReposData := getJSON $userData.repos_url "?per_page=100&type=member" (dict "Accept" "application/vnd.github.v3+json") -}}
 {{- $reposData := append $ownedReposData $memberReposData -}}
