--- a/layouts/partials/site/footer.html
+++ b/layouts/partials/site/footer.html
@@ -2,7 +2,7 @@
     <p>
         <a href='{{ relref $ "/imprint#license" }}'
            title="CC0 1.0 Universal Public Domain Dedication">
-            {{- partial "cc-icon.html" "zero" -}}
+            {{- partial "icon/cc" "zero" -}}
         </a> {{ now.Format "2006" }} {{ $.Site.Data.facts.name }}.
     </p>
     {{ if (or $.Site.Menus.footer $.Site.IsMultiLingual) }}
