--- a/layouts/partials/icon/fontawesome.html
+++ b/layouts/partials/icon/fontawesome.html
@@ -1,3 +1,7 @@
+{{- if not . -}}
+    {{ errorf "Input must be an icon name: %s" .Position }}
+{{- end -}}
+
 {{- $resourcePath := print "node_modules/@fortawesome/fontawesome-free/svgs/" . ".svg" -}}
 {{- $asset := resources.Get $resourcePath | resources.Minify -}}
 
