Include GitHub token

--- a/layouts/partials/github/stats/forks.html
+++ b/layouts/partials/github/stats/forks.html
@@ -5,16 +5,21 @@
 
 {{- $githubApiUrl := "https://api.github.com/" -}}
 {{- $githubHeaders := dict "Accept" "application/vnd.github.v3+json" -}}
+{{- if in $username ":" -}}
+    {{- $githubAuthorization := print "Basic " (base64Encode $username) -}}
+    {{- $githubHeaders = merge $githubHeaders (dict "Authorization" $githubAuthorization) -}}
+    {{- $username = index (split $username ":") 0 -}}
+{{- end -}}
 
 {{- $userData := getJSON $githubApiUrl "users/" $username $githubHeaders -}}
-{{- $ownedReposData := getJSON $userData.repos_url "?per_page=100&type=owner" (dict "Accept" "application/vnd.github.v3+json") -}}
-{{- $memberReposData := getJSON $userData.repos_url "?per_page=100&type=member" (dict "Accept" "application/vnd.github.v3+json") -}}
+{{- $ownedReposData := getJSON $userData.repos_url "?per_page=100&type=owner" $githubHeaders -}}
+{{- $memberReposData := getJSON $userData.repos_url "?per_page=100&type=member" $githubHeaders -}}
 {{- $reposData := append $ownedReposData $memberReposData -}}
 
+{{/* Count forks of repositories. */}}
 {{- $forks := 0 -}}
-
 {{- range $reposData -}}
-{{- $forks = add $forks .forks -}}
+    {{- $forks = add $forks .forks -}}
 {{- end -}}
 
 {{- $forks -}}
