--- a/layouts/partials/github/stats/size.html
+++ b/layouts/partials/github/stats/size.html
@@ -5,17 +5,24 @@
 
 {{- $githubApiUrl := "https://api.github.com/" -}}
 {{- $githubHeaders := dict "Accept" "application/vnd.github.v3+json" -}}
-
-{{- $userData := getJSON $githubApiUrl "users/" $username $githubHeaders -}}
-{{- $ownedReposData := getJSON $userData.repos_url "?per_page=100&type=owner" (dict "Accept" "application/vnd.github.v3+json") -}}
-{{- $memberReposData := getJSON $userData.repos_url "?per_page=100&type=member" (dict "Accept" "application/vnd.github.v3+json") -}}
-{{- $reposData := append $ownedReposData $memberReposData -}}
-
-{{- $kilobytes := 0 -}}
-
-{{- range $reposData -}}
-{{- $kilobytes = add $kilobytes .size -}}
+{{- if in $username ":" -}}
+    {{- $githubAuthorization := print "Basic " (base64Encode $username) -}}
+    {{- $githubHeaders = merge $githubHeaders (dict "Authorization" $githubAuthorization) -}}
+    {{- $username = index (split $username ":") 0 -}}
 {{- end -}}
 
+{{- $userData := getJSON $githubApiUrl "users/" $username $githubHeaders -}}
+{{- $ownedReposData := getJSON $userData.repos_url "?per_page=100&type=owner" $githubHeaders -}}
+{{- $memberReposData := getJSON $userData.repos_url "?per_page=100&type=member" $githubHeaders -}}
+{{- $reposData := append $ownedReposData $memberReposData -}}
+
+{{/* Sum kilobytes. */}}
+{{- $kilobytes := 0 -}}
+{{- range $reposData -}}
+    {{- $kilobytes = add $kilobytes .size -}}
+{{- end -}}
+
+{{/* Convert to megabytes. */}}
 {{- $megabytes := div $kilobytes 1000 -}}
-{{- math.Round $megabytes -}}&thinsp;MB
+
+{{- $megabytes | lang.FormatNumber 0 -}}&thinsp;MB
