--- a/layouts/partials/github/tag.html
+++ b/layouts/partials/github/tag.html
@@ -5,6 +5,11 @@
 
 {{- $githubApiUrl := "https://api.github.com/" -}}
 {{- $githubHeaders := dict "Accept" "application/vnd.github.v3+json" -}}
+{{- if in $username ":" -}}
+    {{- $githubAuthorization := print "Basic " (base64Encode $username) -}}
+    {{- $githubHeaders = merge $githubHeaders (dict "Authorization" $githubAuthorization) -}}
+    {{- $username = index (split $username ":") 0 -}}
+{{- end -}}
 
 {{- $userData := getJSON $githubApiUrl "users/" $username $githubHeaders -}}
 
